# dawproject

./: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
assets/: FixedProject.xsd
assets/tests/: canon.dawproject  copied_canon.dawproject
src/: lib.rs  prelude.rs  read.rs  write.rs
src/models/: bases.rs  mod.rs  parameters.rs
src/repositories/: metadata.rs  mod.rs  project.rs
src/utils/: consts.rs
tests/: io.rs  read.rs
tests/data/: copied_canon.dawproject
