[package]
name = "dawproject"
version = "0.4.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hifa-lang/dawproject.git"
documentation = "https://docs.rs/dawproject/"
description = "A port of DAWproject in Rust."
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "1.0.58"
hifa-xml-schema = "0.3.2"
hifa-xml-schema-derive = "0.3.2"
hifa_yaserde = "0.9.3"
hifa_yaserde_derive = "0.9.3"
zip = "=1.2.1"
